one signal setup
